# bels-shop

./: algoritms.py  celerybeat-schedule.db  pyproject.toml  pytest.ini  ешьу.py
src/: config.py  database.py  exceptions.py  init.py  main.py  time.py  zona.py
src/api/: admin.py  auth.py  dependencies.py  goods.py  reviews.py  shops.py  users.py
src/connectors/: redis_connectors.py
src/migrations/: env.py
src/migrations/versions/: 2025_04_24_1434-3efac5b14604_add_table_users_shops_subscription_.py  2025_04_24_1845-f326fbdb677a_add_column_in_users_email_number_phone_.py  2025_04_24_1847-255978f90764_review_table_users.py  2025_04_24_1859-23ccd03606e9_review_table_users.py  2025_04_24_1954-737710f07b42_review_table_users.py  2025_04_24_1956-c8fe953644a6_review_table_users.py  2025_04_24_2002-0758250bb80c_review_table_users.py  2025_04_28_0034-add34e659620_add_password_chacge_and_relationship.py  2025_04_29_1640-e9d8726ca87b_review_struct_models_orm.py  2025_04_29_1727-5cc1519f6e33_review_struct_models_orm.py  2025_04_29_1732-1e0c65e44959_review_struct_models_orm.py  2025_04_30_1132-f1167f91dbb9_review_column_shops.py  (+6 more)
src/models/: __init__.py  goods.py  reviews.py  shops.py  subscriptions.py  tarifs.py  users.py
src/repositories/: base.py  goods.py  passwordchange.py  reviews.py  shops.py  users.py
src/schemas/: goods.py  reviews.py  shop.py  subscription.py  tarifs.py  users.py  users_auth.py
src/service/: admins.py  auth.py  goods.py  reviews.py  shops.py  users.py
src/tasks/: celery_app.py  tasks.py
src/tests/: conftest.py
src/utils/: db_manager.py
(+4 files in other folders)
